Save and reload a basic Class diagram
https://github.com/hasii2011/PyUt/issues/1

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -24,10 +24,25 @@
     },
     "loggers": {
         "root": {
-            "level":     "ERROR",
+            "level":     "INFO",
             "propagate": "False"
         },
         "Pyut": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
+        "PyutXmlV8": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
+        "lang": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
+         "IoFile": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
