A little bit of clean up
https://github.com/hasii2011/PyUt/issues/1
https://github.com/hasii2011/PyUt/issues/3

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -47,6 +47,11 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+         "PyutDocument": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
         "plugins": {
             "level":     "INFO",
             "propagate": "False"
