I can see the Pyut properties dialog;  TODO: Rename the menu entry to "Preferences" when running on Mac
https://github.com/hasii2011/PyUt/issues/1
https://github.com/hasii2011/PyUt/issues/3

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -52,6 +52,11 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "DlgPyutProperties": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
         "plugins": {
             "level":     "INFO",
             "propagate": "False"
