The tips frame appears twice because the TipsFrame constructor does a .show();  Which then allows a 2nd onActivate event to occur before we set the 'alreadyDisplayed...' flag.  So, I'll cheat and set it before I actually call the constructor
https://github.com/hasii2011/PyUt/issues/1
https://github.com/hasii2011/PyUt/issues/3

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -32,6 +32,11 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "AppFrame": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
         "PyutXmlV8": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
