--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -62,6 +62,11 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "OglObject": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
         "plugins": {
             "level":     "INFO",
             "propagate": "False"
