PEP-8 updates;  Clean 'object" shadows name
https://github.com/hasii2011/PyUt/issues/1
https://github.com/hasii2011/PyUt/issues/3

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -27,6 +27,12 @@
             "level":     "INFO",
             "propagate": "False"
         },
+        "Mediator": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
+
         "Pyut": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
