PEP-8 updates;  Fix docstrings so Pycharm can detect correct types; Fix warning on badly patch Actions;  Put in TODO on inline imports so we can fix later;  (Architecture problem)  Fix processChar() so key events on UML Frames work;  Put in TODO to fix code that continuously creates potentially static dictionary on every execution
https://github.com/hasii2011/PyUt/issues/1

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -27,7 +27,7 @@
             "level":     "INFO",
             "propagate": "False"
         },
-        "Mediator": {
+        "mediator": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
