PEP-8 updates;  Need a logger for our changes in DiagramFrame
https://github.com/hasii2011/PyUt/issues/1
https://github.com/hasii2011/PyUt/issues/3

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -42,6 +42,11 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "DiagramFrame": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
         "PyutXmlV8": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
