Ok, the test code is not that hard to fix.  Put some stuff back;  Mostly, accounting to Python 2 to Python 3 changes in the typing system;  This is why many Python 2 apps did not convert and why it has taken so long to get rid of Python 2.
https://github.com/hasii2011/PyUt/issues/1

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -42,6 +42,11 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "UmlFrame": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
         "MiniOgl.DiagramFrame": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
