Add new section in preferences to turn off the Tips dialog on startup;  Still need to hook the check box on the fram to the preferences file
https://github.com/hasii2011/PyUt/issues/1

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -37,6 +37,11 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "PyutPreferences": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
         "AppFrame": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
