Try to fix one more plugin;  Break up a bunch of those one-liner list creation code sequences;  They look cool because they are a single line; but you cannot easily debug them;  So I am making them multi-line Also fix the DlgFEOptions dialog;  This is probably a wxPython 4 update;  The dialog cannot register a "ok" callback; Won't be modal;  So moved that code to the plugin Added more logging; Really need to make the code start using Python packages
https://github.com/hasii2011/PyUt/issues/7

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -72,12 +72,22 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+         "ToFastEdit": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
          "PyutDocument": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
         "DlgPyutProperties": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
+        "plugins.DlgFEOptions": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
