--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -77,6 +77,11 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+         "ToTransforms": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
          "PyutDocument": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
