Needed to ensure move of class did not affect functionality.
https://github.com/hasii2011/PyUt/issues/30

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -32,6 +32,11 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "org.pyut": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
         "Pyut": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
