https://github.com/hasii2011/PyUt/issues/6

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -131,6 +131,11 @@
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
+        },
+        "ToArrangeLinks": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
         }
     }
 }
