https://github.com/hasii2011/PyUt/issues/6
Should not have checked that file in.
Need new module logger for cleaned up start up app

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -43,6 +43,11 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "Pyut2": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
         "PyutPreferences": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
