--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,6 @@ python:
 # command to install dependencies
 install:
   - pip install -r requirements.txt
+
+# command to run tests
+script: runtests.sh
