--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,8 @@ python:
 
 # command to install dependencies
 install:
-  - pip install -r requirements.txt
+  # - pip install -r requirements.txt
+  pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-16.04 wxPython
 
 # command to run tests
 script: runtests.sh
