Find my custom test script
https://github.com/hasii2011/PyUt/issues/49

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ install:
   pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-16.04 wxPython
 
 # command to run tests
-script: runtests.sh
+script: ${TRAVIS_BUILD_DIR}/runtests.sh
