Can parse the 3 checked in DTDs;
Fixed:

https://github.com/hasii2011/PyUt/issues/53

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -140,5 +140,13 @@
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
-        }    }
+        },
+        "org.pyut.plugins.dtd.DTDParser": {
+            "level": "INFO",
+            "handlers": [
+                "consoleHandler"
+            ],
+            "propagate": "False"
+        }
+    }
 }
