A little bit of prep work
https://github.com/hasii2011/PyUt/issues/52

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -147,6 +147,13 @@
                 "consoleHandler"
             ],
             "propagate": "False"
+        },
+        "org.pyut.plugins.xsd.XSDParser": {
+            "level": "INFO",
+            "handlers": [
+                "consoleHandler"
+            ],
+            "propagate": "False"
         }
     }
 }
