https://github.com/hasii2011/PyUt/issues/6
Need updates to setup.py
Our Ascii text was not pure ASCII
Helper script for in-places executable
PEP-8 update
Update ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 .idea/
 __pycache__/
 .DS_Store
-/venv-albow/
 /html/
 /build/
 /dist/
-/python3_albow.egg-info/
+/.eggs/
+UNKNOWN.egg-info
 /venv-3.7.3-wxPython/
 /site/
 /docs/
