https://github.com/hasii2011/PyUt/issues/10
CommandGroup -- needed additional debug
DelOglLinkCommand -- deserialize the type enum
                     additional type information to make it obvious
DelOglLinkedObjectCommand -- Python 3 constructor call update;
                             convert to asdoc; Update some terminology
DelOglObjectCommand -- Main fix is to use Python3 method to import modules;
                       Typing updates to clarify code documentation
                       A minor indentation update to acqui​esce to Pycharm
OglLinkType -- update so that enum serializes to a string that can be used by the static toEnum
HistoryUtils -- Add debug;  Fix to use asdoc
OglLinkFactory -- asdoc update
TestCommandGroup -- new unit test

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -118,6 +118,16 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "org.pyut.commands.CommandGroup": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
+        "HistoryUtils": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
         "org.pyut.plugins": {
             "level":     "INFO",
             "propagate": "False"
