https://github.com/hasii2011/PyUt/issues/20
Partial update
---------------
CreateOglLinkCommand - SDMessage is its own type of link
Mediator - Additional debug to help me understand how a message should be constructed;  Will late turn to debug level
OglLinkFactor - Update factory to support SDMessage
OglSDMessage - Update to subclass from OglLink; invoke the proper super constructor;  labels should be better initialized;  TODO need a way to update message name

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -91,7 +91,7 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
-        "org.pyut.general.mediator": {
+        "org.pyut.general.Mediator": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
