--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -74,6 +74,11 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "org.pyut.MiniOgl.AnchorPoint": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
 
         "org.pyut.persistence.PyutXmlV8": {
             "level":     "INFO",
