https://github.com/hasii2011/PyUt/issues/20
Prep work;  Need some common code that was in the constructor for OglAssociation to compute link length

Updated some classes to the more `modern` use of super().__init()

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -118,6 +118,11 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "org.pyut.ogl.OglSDMessge": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
         "org.pyut.commands.CommandGroup": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
