--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@
 # os: osx
 
 # osx_image: xcode11.2
-dist: trusty
+dist: bionic
+
+services:
+  - xvfb
 
 language: python
 
@@ -16,10 +19,5 @@ install:
   # - pip install -r requirements.txt
   pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-16.04 wxPython
 
-before_script:
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
-
 # command to run tests
-script: ${TRAVIS_BUILD_DIR}/runtests.sh
+script: xvfb-run ${TRAVIS_BUILD_DIR}/runtests.sh
