--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,9 @@ python:
 
 # command to install dependencies
 install:
-  pip install -r requirements.txt
-  # pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-16.04 wxPython
-  # pip install xmlschema
+  # pip install -r requirements.txt
+  - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-16.04 wxPython
+  - pip install xmlschema
 
 # command to run tests
 script: ${TRAVIS_BUILD_DIR}/runtests.sh
