Don't need the wrapper;  We stared the service

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ install:
   - pip install xmlschema
 
 # command to run tests
-script: xvfb-run ${TRAVIS_BUILD_DIR}/runtests.sh
+script: ${TRAVIS_BUILD_DIR}/runtests.sh
