--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -202,6 +202,11 @@
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
+        },
+        "ToCDAutoLayout": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
         }
     }
 }
