https://github.com/hasii2011/PyUt/issues/74
Prep work
    Make asdoc
    Add typing
    Add stub right click handler on tree

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -63,6 +63,11 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "org.pyut.ui.FileHandling": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
 
         "org.pyut.MiniOgl.DiagramFrame": {
             "level":     "INFO",
