https://github.com/hasii2011/PyUt/issues/76
MainUI -- cache the popup menus so we do not have to recreate the every time
          Use the new diagram title to display in he notebook tab

PyutDocument - better string representation for debugging

UmlFrame - set the scrolling viewport at a more nature 0,0 (Upper left) position rather
           than centered in the virtual area

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -63,7 +63,7 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
-        "org.pyut.ui.FileHandling": {
+        "org.pyut.ui.MainUI": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
