https://github.com/hasii2011/PyUt/issues/78
PEP-8 Updates
asdoc updates
typing updates
debug to determine why the association name is not displayed on links
has to do with missing umlframe when center label is created

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -95,7 +95,12 @@
             "propagate": "False"
         },
 
-        "org.pyut.persistence.PyutXmlV8": {
+        "org.pyut.persistence.PyutXmlV9": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
+        "org.pyut.persistence.converters.ToOgl": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
@@ -129,6 +134,11 @@
             "propagate": "False"
         },
         "org.pyut.ogl.OglClass": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
+        "org.pyut.ogl.OglAssociation": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
