--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ install:
   # pip install -r requirements.txt
   - pip install -U -f https://extras.wxpython.org/wxPython4/extras/linux/gtk3/ubuntu-16.04 wxPython
   - pip install xmlschema
+  - pip install html-testRunner
 
 # command to run tests
 script: ${TRAVIS_BUILD_DIR}/runtests.sh
