https://github.com/hasii2011/PyUt/issues/79
If I manually put in some coordinates they at least display;  The 2nd part of the
problem is that the coordinates are not saved in XML;  The first part of the problem
was because of `withChildren` always being False it would not be drawn
The first version of the Python 2 code I inherited was attempting to remove the `withChildren` parameters but looked unfinished;
I put them back to stop some Pycharm warnings  and set them to False as some indicated in some `commented out` code;  Seems like it should always be true and the boolean should be removed;

This might cause some unneeded redraws but the original code was from Python 2.x wxPython 2.x (2005);  It is now 2020, Python 3, wxPython 4.x;  I think speed improvements in both hardware and software may have overcome this.  In any case, I should probably do that change in a branch and merge later

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -69,6 +69,11 @@
             "propagate": "False"
         },
 
+        "org.pyut.MiniOgl.Diagram": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
         "org.pyut.MiniOgl.DiagramFrame": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
