https://github.com/hasii2011/PyUt/issues/69
Fix more typos
Actually remove print statements
Fix a couple of warnings

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -227,6 +227,11 @@
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
+        },
+        "ToSugiyama": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
         }
     }
 }
