https://github.com/hasii2011/PyUt/issues/72
loggingConfiguration.json - update logger names to match the fact that plugins are loaded
w/o package names

Mediator - need a debug method to auto-select shapes;  Refactored deselect to new general method

IoJava - Removed cut & paste code from C++ plugin; refactored to use f-strings;
Also, code mis-used file descriptor returned from sys.open;  Not sure this ever wored

PyutIoPlugin - debug code to auto-select

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -174,16 +174,17 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
-        "org.pyut.plugins.ToPython": {
+        "IoPython": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
-        "org.pyut.plugins.ToPython.IOPython": {
+        "IoJava": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+
         "org.pyut.plugins.ToArrangeLinks": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
@@ -229,6 +230,11 @@
             "propagate": "False"
         },
         "ToSugiyama": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
+        "ToPython": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
