--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -174,6 +174,12 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "org.pyut.plugins.PyutIoPlugin": {
+            "level":     "DEBUG",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
+
         "IoPython": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
