--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -105,7 +105,7 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
-        "org.pyut.persistence.converters.ToOgl": {
+        "org.pyut.persistence.converters.MiniDomToOgl": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
             "propagate": "False"
