https://github.com/hasii2011/PyUt/issues/86
Store visibility as enum name rather than value;  more V10 updates
Fix a couple of bugs that existed in V8 and V10 when retrieving the XML;  We were loading the string values for visibility rather than the enum

Remove some old commented out code in PyutXmlV10; Should remove it in v9 also

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -110,6 +110,11 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "org.pyut.persistence.converters.OglToMiniDomV10": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
         "org.pyut.persistence.IoFile": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
