PyutUtils - new method to get just filename out of path OglNote - debug help MiniDomToOgl - Fix debug logging MainUI - Put in debugging to diagnose project being null at times PyutProject - UI fixes; typographical errors fixed; doc string updates; debug update TestPyutUtils - new unit test for new functionality PyutNote - Add TODO fix doc strings PyutObject - Fix doc strings

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -68,6 +68,11 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "org.pyut.ui.PyutProject": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
 
         "org.pyut.MiniOgl.Diagram": {
             "level":     "INFO",
