https://github.com/hasii2011/PyUt/issues/70
Create tulips;  [ nodes that is :-)    ]

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -205,7 +205,16 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
-
+        "ToOrthogonalLayout": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
+        "org.pyut.plugins.orthogonal.TulipMaker": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
         "ToArrangeLinks": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
