https://github.com/hasii2011/PyUt/issues/70
Let's try an alternate implementation

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -210,6 +210,11 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "ToOrthogonalLayoutAlternate": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
         "org.pyut.plugins.orthogonal.TulipMaker": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
