--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
   - pip install xmlschema
   - pip install html-testRunner
   - pip install pygmlparser
+  - pip install tulip-python
 
 # command to run tests
 script: ${TRAVIS_BUILD_DIR}/runtests.sh
