https://github.com/hasii2011/PyUt/issues/70
More discovery code

--- a/loggingConfiguration.json
+++ b/loggingConfiguration.json
@@ -269,6 +269,12 @@
             "handlers":  ["consoleHandler"],
             "propagate": "False"
         },
+        "ToOrthogonalLayoutAlternate": {
+            "level":     "INFO",
+            "handlers":  ["consoleHandler"],
+            "propagate": "False"
+        },
+
         "ToPython": {
             "level":     "INFO",
             "handlers":  ["consoleHandler"],
